--- a/index.html
+++ b/index.html
@@ -112,7 +112,29 @@
         </section>
     </header>
     <main>
+        <section class="container my-5">
 
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="d-flex align-items-center p-3 border bg-warning justify-content-between rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="d-flex align-items-center p-3 border bg-success justify-content-between rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="d-flex align-items-center p-3 border bg-primary justify-content-between rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
