--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- custom styles  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -49,7 +51,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -64,7 +66,7 @@
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports
                                 </h1>
@@ -81,7 +83,7 @@
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room
                                 </h1>
@@ -112,7 +114,8 @@
         </section>
     </header>
     <main>
-        <section class="container my-5">
+        <!-- categories  -->
+        <section class="container my-5 categories">
 
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
@@ -149,7 +152,7 @@
                                 content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy now</button>
+                            <button class="btn panda-btn-buy">Buy now</button>
                         </div>
                     </div>
                 </div>
@@ -162,7 +165,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy now</button>
+                            <button class="btn panda-btn-buy">Buy now</button>
                         </div>
                     </div>
                 </div>
@@ -177,7 +180,7 @@
                                 action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy now</button>
+                            <button class="btn panda-btn-buy">Buy now</button>
                         </div>
                     </div>
                 </div>
@@ -233,11 +236,11 @@
         </section>
         <!-- subscribe section  -->
         <section style="height:300px;"
-            class="container d-flex justify-content-center align-items-center bg-info rounded-3">
+            class="container d-flex justify-content-center align-items-center panda-bg-info rounded-3">
             <div class="">
                 <h1>Let's stay in touch</h1>
                 <p>get updates on sales, special and more</p>
-                <input type="text " placeholder="Your email"><br>
+                <input type="text " class="form-control" placeholder="Your email"><br>
                 <button class="btn btn-warning">Submit</button>
             </div>
 
